--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,11 @@
     <string name="app_name">eTrek</string>
     <string name="title_home">我的</string>
     <string name="title_dashboard">地图</string>
-    <string name="title_notifications">消息</string>
+    <string name="title_collection">收藏</string>
+    <string name="setting">设置</string>
+    <string name="location">位置</string>
+    <string name="track">轨迹</string>
+    <string name="search">搜索</string>
 
     <string name="title_activity_collapsing_toolbar_layout">滑动测试</string>
     <string name="large_text">large text</string>
