--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="location">位置</string>
     <string name="track">轨迹</string>
     <string name="search">搜索</string>
+    <string name="edit">编辑</string>
+    <string name="pedestrianism">徒步</string>
+    <string name="drive">驾车</string>
+    <string name="free_stroke">自由行</string>
 
     <string name="title_activity_collapsing_toolbar_layout">滑动测试</string>
     <string name="large_text">large text</string>
