[add] 用户页面UI设计，预览页面优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="track">轨迹</string>
     <string name="search">搜索</string>
     <string name="edit">编辑</string>
+    <string name="preview">预览</string>
     <string name="pedestrianism">徒步</string>
     <string name="drive">驾车</string>
     <string name="free_stroke">自由行</string>
