--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,12 @@
     <string name="edit">编辑</string>
     <string name="preview">预览</string>
     <string name="pedestrianism">徒步</string>
+    <string name="riding_bicycle">骑行</string>
     <string name="drive">驾车</string>
     <string name="free_stroke">自由行</string>
+    <string name="coordinate">坐标</string>
+    <string name="add_poi">添加收藏</string>
+    <string name="format_coordinate">(%s,%s)</string>
 
     <string name="title_activity_collapsing_toolbar_layout">滑动测试</string>
     <string name="large_text">large text</string>
